--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Katsunori Fukui <katsunori.fukui04@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 nature-remo = "^0.3.3"
+pytz = "^2021.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
